boulder/tests/compile_fail/type/structures/indirect_self_ref.bo
# Recursive type `B`
# Recursive type `C`
# (10:
# (14:

struct A {
    b: B,
}

struct B {
    c: C
}

struct C {
    b: B,
}